actual fix for white space on mobile

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -12,7 +12,6 @@
   overflow: -moz-scrollbars-none; /* For other browsers with scrollbar support */
   overflow-y: scroll; /* To enable scrolling */
   scroll-snap-type: y mandatory;
-  max-width: 100vw;
 }
 html {
   font-family: "Source Sans 3", sans-serif;
