--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -303,7 +303,7 @@
   justify-content: center;
   background-color: var(--secondary-color);
   height: 100vh;
-  width: 100vw;
+  width: 100%;
  
 }
 
