--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -8,7 +8,7 @@
   font-weight: 400;
   position: fixed;
   left: 0;
-  width: 100vw;
+  width: 100%;
   z-index: 100;
   background-color:var(--secondary-color);
   
