--- a/src/components/pages/about/about.css
+++ b/src/components/pages/about/about.css
@@ -5,6 +5,7 @@
   justify-content: center;
   margin-bottom:0;
   height: 100vh;
+  width: 100%;
   
 }
 
