--- a/src/components/pages/landing/landing.css
+++ b/src/components/pages/landing/landing.css
@@ -8,7 +8,7 @@
   text-align: center;
   font-size: 18px;
   margin: 0;
-  width: 100vw;
+  width: 100%;
   
 }
 .header-content-inner{
@@ -19,7 +19,7 @@
   align-items: center;
   height: 80vh;
   margin: 0;
-  width: 100vw;
+  width: 100%;
   
 }
 .landing-page {
@@ -34,7 +34,7 @@
 .landingmain {
   
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end ;
@@ -256,7 +256,7 @@ align-items: center;
   }
   .landing-page h3 {
     font-size: 1.2rem;
-    width: 100vw;
+    width: 100%;
   }
 }
 @media screen and (max-height: 600px) {
@@ -281,7 +281,7 @@ align-items: center;
 }
 @media screen and (max-width: 500px) {
 .landing-page h2 {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
 
 }
 }
